infrastructure/configs/development/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pihole-httproute
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - pihole.nishantlabs.cloud
    #- pihole.local.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pihole-web
      port: 80
